--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0;
   font-family: Montserrat;
   
+  
 }
 
 
@@ -13,4 +14,5 @@
   background-position-y: center;
   background-position-x: center;
   background-size: 250%;
+  overflow: hidden;
 }
