--- a/src/PokemonDetails/index.css
+++ b/src/PokemonDetails/index.css
@@ -4,13 +4,14 @@
 
 }
 .DescriptionCard{
-    margin: 15px 15px;
+    min-height:fit-content;
     max-width: fit-content;
 }
 .AbilitiesCard{
     align-items: flex-end;
     margin-top: 15px;
     max-width: fit-content;
+    min-width: fit-content;
 }
 
 .nomes {
